# markitdown-server

./: .gitignore  Dockerfile  Makefile  README.md  converter.py  pyproject.toml  requirements.txt  test_main.http
.github/workflows/: release.yaml
api/: index.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
