[project]
name = "markitdown-server"
version = "0.1.0"
description = ""
authors = [
    {name = "sirily11",email = "32106111+sirily11@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "markitdown[all] (>=0.1.2,<0.2.0)",
    "openai (>=1.82.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
